--- a/catweb/package.json
+++ b/catweb/package.json
@@ -21,5 +21,9 @@
     "@vue/cli-service": "~4.5.0",
     "sass-loader": "^9.0.3",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "description": "```\r npm install\r ```",
+  "main": "babel.config.js",
+  "author": "",
+  "license": "ISC"
 }
